--- a/插件式开发/weishu系列/1.Android插件化原理解析——概要.md
+++ b/插件式开发/weishu系列/1.Android插件化原理解析——概要.md
@@ -27,18 +27,17 @@ H5和Hybird可以解决这些问题，但是始终比不上native的用户体验
 
 接下来的一系列文章将以DroidPlugin为例讲解插件框架的原理，揭开插件化的神秘面纱；同时还能帮助深入理解Android Framewrok；主要内容如下：
 
-* Hook机制之动态代理
-* Hook机制之Binder Hook
-* Activity生命周期管理，占坑和Hook
-* 插件的广播机制，静态广播非静态
-* Service组件的管理，占坑和Hook
-* ContentProvider的管理
-* 插件加载解析之自定义包管理服务(PackageManager)
-* 插件进程管理机制（ActivityMAnager）
-* 插件机制之资源管理
-* DroidPlugin插件通信机制
-* DroidPlugin框架缺陷
-* 不同插件框架方案对比
-* 插件化的未来
+* [Hook机制之动态代理](2.Android插件化原理解析——Hook机制之动态代理.md)
+* [Hook机制之Binder Hook](3.Android插件化原理解析——Hook机制之BinderHook.md)
+* [Hook机制之AMS&PMS](4.Android插件化原理解析——Hook机制之AMS与PMS.md)
+* [Activity生命周期管理](5.Android插件化原理解析——Activity生命周期管理.md)
+* [插件加载机制](6.Android插件化原理解析——插件加载机制.md)
+* [广播的管理方式](7.Android插件化原理解析——广播的管理.md)
+* [Service的插件化](8.Android插件化原理解析——Service的插件化.md)
+* [ContentProvider的插件化](9.Android插件化原理解析——ContentProvider的插件化.md)
+* [DroidPlugin插件通信机制](10.Android插件化原理解析——DroidPlugin插件通信机制.md)
+* [插件机制之资源管理](11.Android插件化原理解析——插件机制之资源管理.md)
+* [不同插件框架方案对比](12.Android插件化原理解析——不同插件框架方案对比.md)
+* [插件化的未来](13.Android插件化原理解析——插件化的未来.md)
 
 另外，对于每一章内容都会有详细的demo，具体见[understand-plugin-framework](https://github.com/tiann/understand-plugin-framework)；喜欢就点个关注吧～定期更新，敬请期待！
